--- a/TPC2/TPC2.ipynb
+++ b/TPC2/TPC2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Descobre o num do PC.png\n",
+    "### Descobre o num do PC\n",
     "\n",
     "import random\n",
     "\n",
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### PC descobre o meu num.png\n",
+    "### PC descobre o meu num\n",
     "\n",
     "import random\n",
     "\n",
